# escrow

./: .gitignore  notes.md  package-lock.json  package.json  run.sh
api/: Cargo.toml
db/: tokens.json  wallets.json
gothmog/: Cargo.toml
gothmog/src/: create_applecoin.rs  create_bananacoin.rs  create_usdc.rs  fund_alice_appletoken.rs  fund_bob_bananatoken.rs  fund_usdc.rs  main.rs  token.rs  wallet.rs
token-escrow/: Cargo.toml
token-escrow/src/: lib.rs
token-escrow/tests/: escrow_integration.rs
ui/: .prettierrc  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  Token.ts  index.css  main.tsx  theme.ts
ui/src/components/: TokenList.tsx  TradeForm.tsx
ui/src/hooks/: useTokenBalances.ts
ui/src/providers/: SolanaProvider.tsx
